@@ -4,6 +4,7 @@ dolly-move-west=Move entity west
 dolly-move-south=Move entity south
 dolly-move-east=Move entity east
 dolly-rotate-rectangle=Rotate oblong combinator
+dolly-rotate-rectangle-reverse=Reverse rotate oblong combinator
 dolly-rotate-saved=Rotate saved dolly
 dolly-rotate-saved-reverse=Reverse rotate saved dolly
 
